fix pre overflow on mobile

--- a/app/assets/stylesheets/actiontext.css
+++ b/app/assets/stylesheets/actiontext.css
@@ -37,6 +37,7 @@
 
 .trix-content pre {
   background-color: var(--code-bg-color);
+  overflow-x: scroll;
 }
 
 trix-toolbar {
